src/objects/Managing_Group__c.object
<CustomObject>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch/Region/Area</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Managing Group</relationshipLabel>
        <relationshipName>Managing_Group</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dormant_Date__c</fullName>
        <label>Dormant Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dormant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dormant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Managing_Group_Type__c</fullName>
        <label>Managing Group Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parent support group</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Facilitating group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSA</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Managing Group</relationshipLabel>
        <relationshipName>Managing_Group</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Managing_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Managing Group</label>
        <referenceTo>Managing_Group__c</referenceTo>
        <relationshipLabel>Managing Group</relationshipLabel>
        <relationshipName>Managing_Group</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Managing Group</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Managing Group</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>